--- a/src/index.css
+++ b/src/index.css
@@ -19,14 +19,14 @@ body {
 
 ::-webkit-scrollbar {
   width: 13px;
-  height: 13px;
 }
-/* ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
-} */
+}
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 1px;
-  -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.5);
 }
